<resources>
    <string name="app_name">Pomodroid</string>
    <string name="title_task_list">Task List</string>
    <string name="title_config">Config</string>
    <string name="title_timer">Timer</string>
    <string name="add_task">Add Task</string>
    <string name="no_tasks_added_yet">No Tasks Added Yet!</string>
    <string name="lb_title">Title</string>
    <string name="text_input_1">Type</string>
    <string name="lbl_content">Add a more detailed description</string>
    <string name="lbl_category">Category</string>
    <string name="err_msg_enter_title">Please enter a title</string>
    <string name="err_msg_enter_category">Please enter a category</string>
    <string name="err_msg_enter_description">Please enter a description</string>
    <string name="action_edit_task">Edit Task</string>
    <string name="action_delete_task">Delete Task</string>

    <string name="time_in_minutes">%1$s Mins</string>
    <string name="rounds_format">%1$s Rounds</string>
</resources>