<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kl3jvi.pomodroid.view.fragments.TaskListFragment"
        android:label="@string/title_task_list"
        tools:layout="@layout/fragment_task_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kl3jvi.pomodroid.view.fragments.ConfigFragment"
        android:label="@string/title_config"
        tools:layout="@layout/fragment_config" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.kl3jvi.pomodroid.view.fragments.TimerFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer" />
</navigation>